k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: reactweb
  name: reactweb
  namespace: default
spec:
  externalTrafficPolicy: Cluster
  ports:
    - nodePort: 30205
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: reactweb
  type: LoadBalancer
