k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: reactweb
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: reactweb.com
      http:
        paths:
          - backend:
              serviceName: reactweb
              servicePort: 3000
            path: /
